Ensure default outline style button has legible text on hover

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -3658,6 +3658,10 @@ body.page .main-navigation {
   border-color: #111;
 }
 
+.entry .entry-content .wp-block-button.is-style-outline .wp-block-button__link:hover:not(.has-text-color) {
+  color: #111;
+}
+
 .entry .entry-content .wp-block-archives,
 .entry .entry-content .wp-block-categories,
 .entry .entry-content .wp-block-latest-posts {
