--- a/style.css
+++ b/style.css
@@ -3670,6 +3670,10 @@ body.page .main-navigation {
   border-color: #111;
 }
 
+.entry .entry-content .wp-block-button.is-style-outline .wp-block-button__link:hover:not(.has-background) {
+  color: #111;
+}
+
 .entry .entry-content .wp-block-archives,
 .entry .entry-content .wp-block-categories,
 .entry .entry-content .wp-block-latest-posts {
